fix: dark mode prose-short fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -156,7 +156,7 @@
     @apply text-secondary-foreground
   }
   .prose-short {
-    @apply space-y-3 dark:space-y-4;
+    @apply space-y-3 dark:space-y-3.5;
   }
   .prose-long {
     @apply space-y-3 dark:space-y-4 md:space-y-4 dark:md:space-y-5;
